try to avoid egregious nowrap code in posts.

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -306,6 +306,9 @@ footer > *:last-child {
     padding-left: var(--gutter);
     padding-right: var(--gutter);
   }
+  article p code {
+    white-space: normal;
+  }
   footer {
     padding: 0 0 1em 0;
   }
